opravy chyb viz níže
- opravena chyba v registračním dialogu
- baravně odlišeny soubory a složky
- opravena chyba při uspěšném připojení

--- a/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
+++ b/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
@@ -69,9 +69,8 @@
                                 Username: <input type="text" id="username" name="username" required/><br>
                                 Password: <input type="password" id="password" name="password" required/><br>
                                 <input type="hidden" id="id_access" name="id_access" value=""/><br>
-                                <input class="btn btn-primary" type="submit" value="Connect"/>
-                                <input class="btn btn-danger" type="button" value="Smazat připojení" id="deleteAccess"
-                                       data-bs-dismiss="modal"/>
+                                <input class="btn btn-primary" type="submit" value="Connect" data-bs-dismiss="modal"/>
+                                <input class="btn btn-danger" type="button" value="Smazat připojení" id="deleteAccess" data-bs-dismiss="modal"/>
                             </form>
                             <br>
 
@@ -104,7 +103,7 @@
                                 heslo: <input type="password" id="user_password" name="user_password" required/><br>
                                 heslo znovu: <input type="password" id="user_passwordAgain" name="user_passwordAgain"
                                                     required/><br>
-                                <input type="submit" value="userRegister"/>
+                                <input type="submit" class="btn btn-primary" value="userRegister"/>
                             </form>
                             <br>
 
@@ -115,7 +114,7 @@
                                 email: <input type="email" id="login_user_email" name="user_email" required/><br>
                                 heslo: <input type="password" id="login_user_password" name="user_password"
                                               required/><br>
-                                <input type="submit" value="userLogin" data-bs-dismiss="modal"/>
+                                <input type="submit" value="userLogin" class="btn btn-primary" data-bs-dismiss="modal"/>
                             </form>
                             <br>
 
