přídána kontrola duplikace FTP pripojení

--- a/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
+++ b/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
@@ -61,7 +61,6 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-
                     <div class="row">
                         <div class="col">
                             <form id="ftpForm" method="post">
@@ -73,28 +72,22 @@
                                 <input class="btn btn-danger" type="button" value="Smazat připojení" id="deleteAccess" data-bs-dismiss="modal"/>
                             </form>
                             <br>
-
                         </div>
-
-
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
-
 
     <!-- Auth Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Přihlášení / Registrace</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-
                     <div class="row">
                         <div class="col">
                             registrace
@@ -106,7 +99,6 @@
                                 <input type="submit" class="btn btn-primary" value="userRegister"/>
                             </form>
                             <br>
-
                         </div>
                         <div class="col">
                             login
@@ -132,13 +124,9 @@
         <div class="row">
             <div class="col">
                 <h2 id="currentDirectory"></h2>
-
-
                 <strong>Nahrát soubor:</strong>
                 <input type="file" id="fileUpload">
                 <button class="btn btn-danger" onclick="location.reload();">Odpojit se</button>
-
-                <!-- Added id to the table -->
                 <div id="fileList">
                     <table id="filesTable" class="display" style="width:100%">
                         <thead>
@@ -151,16 +139,8 @@
                     </table>
                 </div>
             </div>
-
         </div>
-
     </div>
-
-
-
-
-
-
 </main>
 
 
