--- a/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
+++ b/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
@@ -57,7 +57,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">FTP připojení</h1>
+                    <h1 class="modal-title fs-5" id="FTPModalLabel">FTP připojení</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -96,7 +96,7 @@
                                 heslo: <input type="password" id="user_password" name="user_password" required/><br>
                                 heslo znovu: <input type="password" id="user_passwordAgain" name="user_passwordAgain"
                                                     required/><br>
-                                <input type="submit" class="btn btn-primary" value="userRegister"/>
+                                <input type="submit" class="btn btn-primary" value="Registrovat se"/>
                             </form>
                             <br>
                         </div>
@@ -106,7 +106,7 @@
                                 email: <input type="email" id="login_user_email" name="user_email" required/><br>
                                 heslo: <input type="password" id="login_user_password" name="user_password"
                                               required/><br>
-                                <input type="submit" value="userLogin" class="btn btn-primary" data-bs-dismiss="modal"/>
+                                <input type="submit" value="Přihlásit se" class="btn btn-primary" data-bs-dismiss="modal"/>
                             </form>
                             <br>
 
@@ -118,6 +118,26 @@
             </div>
         </div>
     </div>
+
+    <!-- File Modal -->
+    <div class="modal" tabindex="-1" id="fileModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">File Content</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <pre id="fileContent"></pre>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a id="fileDownload" class="btn btn-primary" href="#" download>Download</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <div class="container text-center" id="FTPTable" style="overflow-y: auto; height: 100vh; ">
