finální verze s úpravami na obhajob

--- a/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
+++ b/www/trep01/sp/www/domains/ftpklient.patriktrejtnar.cz/index.html
@@ -31,7 +31,7 @@
             <span class="fs-4">FTP klient</span>
         </a>
         <hr>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#FTPModal">
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#FTPModal">
             Nové FTP připojení
         </button>
 
@@ -109,11 +109,8 @@
                                 <input type="submit" value="Přihlásit se" class="btn btn-primary" data-bs-dismiss="modal"/>
                             </form>
                             <br>
-
                         </div>
-
                     </div>
-
                 </div>
             </div>
         </div>
@@ -132,13 +129,11 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <a id="fileDownload" class="btn btn-primary" href="#" download>Download</a>
+                    <a id="fileDownload" class="btn btn-warning" href="#" download>Download</a>
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <div class="container text-center" id="FTPTable" style="overflow-y: auto; height: 100vh; ">
         <div class="row">
@@ -155,6 +150,7 @@
                         <thead>
                         <tr>
                             <th>Název složky/souboru</th>
+                            <th>Akce</th>
                         </tr>
                         </thead>
                         <tbody>
